# NormLayer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: .env.example  autogen_demo.ipynb  crewai_demo.ipynb  integration_test.py  langgraph_demo.ipynb  test_autogen_e2e.py  test_aws_e2e.py  test_crewai_e2e.py  test_langgraph_e2e.py  test_llm_judge_e2e.py  test_sagemaker_e2e.py
normlayer/: __init__.py  base_policy.py  engine.py  testing.py
normlayer/adapters/: __init__.py  autogen_adapter.py  crewai_adapter.py  langgraph_adapter.py
normlayer/llm/: __init__.py  cache.py  enhanced.py  judge.py  policy.py  prompts.py  providers.py
normlayer/logging/: __init__.py  sagemaker_job.py  violation_logger.py
normlayer/policies/: __init__.py  coalition_consistency.py  escalate_on_conflict.py  loop_detection.py  no_deception.py  no_unsanctioned_action.py  norm_conflict_resolution.py  response_proportionality.py  role_respect.py
tests/: test_engine.py
tests/test_adapters/: test_autogen_adapter.py  test_crewai_adapter.py  test_langgraph_adapter.py
tests/test_llm/: __init__.py  test_cache.py  test_enhanced.py  test_judge.py  test_llm_policy.py  test_providers.py
tests/test_logging/: test_sagemaker_job.py  test_violation_logger.py
tests/test_policies/: test_coalition_consistency.py  test_escalate_on_conflict.py  test_loop_detection.py  test_no_deception.py  test_no_unsanctioned_action.py  test_norm_conflict_resolution.py  test_response_proportionality.py  test_role_respect.py
