[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "normlayer"
version = "0.3.0"
description = "Framework-agnostic Python SDK for enforcing behavioral policies between agents in multi-agent pipelines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Semantic scoring — needed by NoDeception policy
embeddings = [
    "sentence-transformers>=2.7",
]
# AWS logging — needed by ViolationLogger and SageMaker integration
aws = [
    "boto3>=1.34",
]
# LLM-as-a-judge providers
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
llm = ["anthropic>=0.40"]
llm-all = ["anthropic>=0.40", "openai>=1.0"]
# Framework adapters
langgraph = ["langgraph>=0.1"]
crewai = ["crewai>=0.1"]
autogen = ["pyautogen>=0.2"]
# Install everything
all = [
    "sentence-transformers>=2.7",
    "boto3>=1.34",
    "anthropic>=0.40",
    "openai>=1.0",
]
# Dev / test tooling
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "sentence-transformers>=2.7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["normlayer*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
